removed forceExit flag

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "unit": "jest --config test/unit/jest.conf.js --coverage --forceExit",
+    "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
     "tsd": "npx tsd",
     "test": "npm run unit",
